--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,7 +37,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
     "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1"
   }
 }
